--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* GENERALE */
 #background{
     background: rgb(49,212,140);
     background: linear-gradient(rgba(7,150,137,1) 0%, rgba(7,150,137,1) 25%, rgba(217,219,213,1) 25%, rgba(217,219,213,1) 100%);   
@@ -9,19 +10,10 @@
 
 }
 
+/* PARTE SINISTRA LISTA CHAT */
 #parte-sinistra{
     width: 30%;
     height: 100%;
-}
-
-#parte-destra{
-    width: 70%;
-    height: 100%;
-    border: 1px solid red;
-}
-
-#parte-destra div{
-    border: 1px solid blue;
 }
 
 #zona-alta{
@@ -29,11 +21,19 @@
 }
 
 #zona-alta div{
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.3rem;
 }
 
-i{
+input{
+    width: 90%;
+}
+
+#user i, #user-chat i{
     margin-right: 0.7rem;
+}
+
+#user{
+    background-color: rgb(234, 234, 234);
 }
 
 #signal{
@@ -60,6 +60,25 @@ img{
     margin-right: 0.7rem;
 }
 
+/* PARTE DESTRA CHAT SINGOLA */
+#parte-destra{
+    width: 70%;
+    height: 100%;
+    border-left: 0.5px solid grey;
+}
+
+#user-chat{
+    padding-bottom: 0.3rem;
+    background-color: rgb(234, 234, 234);
+    height: 7%;
+}
+
 #chat{
-    height: 80%;
+    height: 86%;
+    background-image: url('../img/mine.jpg');
+}
+
+#input-mex{
+    background-color: rgb(234, 234, 234);
+    height: 7%;
 }
