--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,27 +17,33 @@
 }
 
 #zona-alta{
-    height: 20%;
+    height: 30%;
 }
 
 #zona-alta div{
     margin-bottom: 0.3rem;
 }
 
+#zona-alta input{
+    margin-top: 10px;
+}
+
 input{
-    width: 90%;
+    width: 85%;
 }
 
 #user i, #user-chat i{
     margin-right: 0.7rem;
 }
 
-#user{
+#user, .selected{
     background-color: rgb(234, 234, 234);
 }
 
 #signal{
     background-color: #00c7fc;
+    padding: 10px;
+    margin-top: 10px;
 }
 
 #signal p{
@@ -46,12 +52,17 @@ input{
 }
 
 #chat-list{
-    height: 80%;
+    height: 70%;
+    overflow: scroll;
 }
 
 #chat-list p{
     font-size: 0.7rem;
     opacity: 0.6;
+}
+
+#person:hover{
+    background-color: rgb(234, 234, 234);
 }
 
 img{
